# speedtest-tui-

./: .gitignore  README.md  pyproject.toml  requirements.txt  speedtest.py
client/: __init__.py  api.py  config.py  constants.py  download.py  grading.py  history.py  latency.py  stats.py  upload.py
tests/: test_api.py  test_bugfixes.py  test_cli.py  test_config.py  test_download_upload.py  test_grading.py  test_output.py  test_stats.py
ui/: __init__.py  dashboard.py  output.py
